--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,6 @@ h1, h2 {
   font-family: Trebuchet, sans-serif;
   font-size: 13px;
   margin-left: 60px;
-  float: left;
 }
 
 .inputs .inputs-top {
@@ -66,4 +65,42 @@ h1, h2 {
   border: none;
   cursor: pointer;
 }
+
+.popover-stuff {
+  width: 240px;
+  height: 200px;
+  margin: 40px 0 0 26px;
+}
+
+h2.trigger {
+  cursor: pointer;
+  margin: 0 0 0 35px;
+}
+
+.popover .rectangle {
+  height: 50px;
+  background-color: #cd3238;
+  border-radius: 15px;
+}
+
+.popover .arrow-up {
+  margin: 0 auto;
+  width: 0;
+  height: 0;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #cd3238;
+}
+
+.popover .rectangle .popover-button {
+  width: 52px;
+  height: 22px;
+  margin: 14px 0 0 94px;
+  border-radius: 0;
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+  background-color: #e7e7e7;
+}
+
 
