--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,12 +16,13 @@ h1, h2 {
   background: url(http://placekitten.com/g/175/175) no-repeat center;
   border-radius: 60px;
   height: 120px;
-  padding-bottom: 6px;
+  margin-bottom: 10px;
   width: 120px;
 }
 
 .item a {
   color: #666666;
+  display: block;
   font-size: 14px;
   text-decoration: none;
 }
