--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,6 +78,14 @@ h2.trigger {
   margin: 0 0 0 25px;
 }
 
+h2.trigger:hover ~ .popover, .popover:hover {
+  display: block;
+}
+
+.popover {
+  display: none;
+}
+
 .popover .rectangle {
   background-color: #cd3238;
   border-radius: 15px;
